@@ -9,6 +9,7 @@
 -refactor sprite collide methods.
 -revise imageloader processing.
 -revise sprite groupcollide for dict obj key.
+-add sprite layeredupdates.
 
 0.24    2021-04-28
 -revise rect move/inflate args processing.
